--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -4,7 +4,19 @@ However, the strongest gravitational-wave signals come from highly compact syste
 Therefore, gravitational-wave detectors find more likely an event which has a powreful signals.
 Thus, it is important to be able to calculate gravitational-wave emission accurately for processes such as black hole or neutron star inspiral and merger.
 Such problems cannot be solved analytically and instead are modeled by numerical relativity to compute the gravitational field near the source.\\
-In this section we study the gravitational-wave signals obtained from numerical simulations of compact binaries, using the Einstein Toolkit, an open-source computational infrastructure for numerical relativity based on Cactus Framework.
-Although we do not give a detailed explanation of the numerical methods used to solve the proposed simulations, we study the gravitational-wave signals and give an overview of different physical quantities which describe the binary sources.
+In this section we study the gravitational-wave signals obtained from numerical simulations of compact binaries, using the Einstein Toolkit, an open-source computational infrastructure for numerical relativity based on Cactus Framework.\\
+The Cactus framework [11–13] is a general framework for the development of portable, modular applications, wherein programs are split into components (called thorns) with clearly defined dependencies and interactions. 
+Thorns are typically developed independently and do not directly interact with each other. 
+Cactus simulations require an ex
+\\
+A thorough description of the numerical methods used to perform the simulations can be found here, we depict the initial conditions of our simulations and we briefly mention the used thorns.
+Rather than analyzing the algorithms of th Einstein Toolkit, the purpose of the following sections is to study the gravitational-wave signals of binaries black holes (BBH) and neutron stars (BNS). 
+
 \subsection{Binary Black holes}
+We simulate the evolution of two equal-mass black holes with quasi-equilirbium initial conditions.
+We use the 
+
+
+
+
 \subsection{Binary Neutron stars}
