--- a/latex_thesis/production_gw/prod_gw.tex
+++ b/latex_thesis/production_gw/prod_gw.tex
@@ -331,4 +331,4 @@ where we inserted $G$ and $c$ in order to give an estimates of the intensity:
 \[
 \]
 The gravitational radiation is emitted at  twice the angular frequency at which the system rotates.
-In addition, $h_{+} ^{\T}= i h_{\times} ^{\T}$ so the wave is circularly polarized.
+In addition, $h_{+} ^{\T}= i h_{\times} ^{\T}$ so the wave is circularly polarized.\\
